tests/spec/emit/snapshots/tuple_local_read_by_index_avoids_a_later_binding_name.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  
  fn pair(n: int) -> (int, int) {
    (n, n + 1)
  }
  
  fn main() {
    let p = pair(3)
    let p0 = 99
    fmt.Println(p.0 + p0)
  }
---
package main

import "fmt"

func pair(n int) (int, int) {
	return n, n + 1
}

func main() {
	p0_1, _ := pair(3)
	p0 := 99
	fmt.Println(p0_1 + p0)
}
