tests/spec/emit/snapshots/tuple_of_concrete_widens_to_unknown_elements_in_argument_position.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn describe(pair: (int, Unknown)) -> string {
    match assert_type<string>(pair.1) {
      Some(text) => text,
      None => "",
    }
  }
  
  fn test() {
    if describe((1, "two")) != "two" {
      panic("tuple argument lost its Unknown element")
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func describe(pair lisette.Tuple2[int, any]) string {
	if text, ok := pair.Second.(string); ok {
		return text
	} else {
		return ""
	}
}

func test() {
	tup := lisette.MakeTuple2[int, string](1, "two")
	if describe(lisette.MakeTuple2[int, any](tup.First, tup.Second)) != "two" {
		panic("tuple argument lost its Unknown element")
	}
}
