tests/spec/emit/snapshots/tuple_of_concrete_widens_to_unknown_elements_in_slice_literal.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn second(pair: (string, Unknown)) -> int {
    match assert_type<int>(pair.1) {
      Some(value) => value,
      None => 0,
    }
  }
  
  fn test() {
    let pairs: Slice<(string, Unknown)> = [("one", 2)]
    if second(pairs[0]) != 2 {
      panic("slice element lost its Unknown element")
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func second(pair lisette.Tuple2[string, any]) int {
	if value, ok := pair.Second.(int); ok {
		return value
	} else {
		return 0
	}
}

func test() {
	tup := lisette.MakeTuple2[string, int]("one", 2)
	pairs := []lisette.Tuple2[string, any]{lisette.MakeTuple2[string, any](tup.First, tup.Second)}
	if second(pairs[0]) != 2 {
		panic("slice element lost its Unknown element")
	}
}
