tests/spec/emit/snapshots/tuple_pattern_in_function_param.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn sum((x, y): (int, int)) -> int {
    x + y
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func sum(arg lisette.Tuple2[int, int]) int {
	x := arg.First
	y := arg.Second
	return x + y
}
