tests/spec/emit/snapshots/tuple_return_annotation.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn get_pair() -> (int, string) {
    (42, "hello")
  }
  
  fn test() {
    let (x, y) = get_pair();
  }
---
package main

func getPair() (int, string) {
	return 42, "hello"
}

func test() {
	getPair()
}
