tests/spec/emit/snapshots/tuple_struct_call_eval_order_captured.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Pair(int, int)
  
  fn bump(i: mut Ref<int>) -> int {
    i.* = 1
    10
  }
  
  fn main() {
    let mut i = 0
    let p = Pair(i, bump(&i))
    let _ = p
  }
---
package main

type Pair struct {
	F0 int
	F1 int
}

func bump(i *int) int {
	*i = 1
	return 10
}

func main() {
	i := 0
	arg := i
	p := Pair{
		F0: arg,
		F1: bump(&i),
	}
	_ = p
}
